Ultimes corrections avant soutenance ?

--- a/Manuscrit/Biblio.bib
+++ b/Manuscrit/Biblio.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Edouard KLEIN at 2013-09-17 18:10:37 +0200 
+%% Created for Edouard KLEIN at 2013-09-23 15:33:03 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bellman1956dynamic,
+	Author = {Bellman, Richard},
+	Date-Added = {2013-09-23 13:32:57 +0000},
+	Date-Modified = {2013-09-23 13:32:57 +0000},
+	Journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	Number = {10},
+	Pages = {767},
+	Publisher = {National Academy of Sciences},
+	Title = {Dynamic programming and Lagrange multipliers},
+	Volume = {42},
+	Year = {1956}}
 
 @article{lauer2011msvmpack,
 	Author = {Lauer, Fabien and Guermeur, Yann and others},
@@ -1364,10 +1376,10 @@ La notion de but appara{\^\i}t, elle est donn{\'e}e par l'expert.
 @book{bellman2003dynamic,
 	Author = {Bellman, R.E.},
 	Date-Added = {2011-11-10 08:52:49 +0000},
-	Date-Modified = {2011-11-10 08:52:49 +0000},
+	Date-Modified = {2013-09-23 13:29:10 +0000},
 	Publisher = {Dover Pubns},
 	Title = {Dynamic programming},
-	Year = {2003}}
+	Year = {1956}}
 
 @book{furnkranz2010preference,
 	Author = {F{\"u}rnkranz, J. and H{\"u}llermeier, E.},
@@ -6725,8 +6737,8 @@ La notion de but appara{\^\i}t, elle est donn{\'e}e par l'expert.
 	Cites2 = {atkeson1997locally,pomerleau1989alvinn},
 	Cites3 = {ratliff2009learning,ratliff2006maximum,ramachandran2007bayesian,lopes2009active,neu2007apprenticeship,syed2008apprenticeship,abbeel2010autonomous},
 	Date-Added = {2011-07-17 12:49:57 +0200},
-	Date-Modified = {2011-10-21 08:25:29 +0000},
-	Journal = {International Conference on Automated Planning and Scheduling (ICAPS)},
+	Date-Modified = {2013-09-23 13:29:10 +0000},
+	Journal = {International Conference on Artificial Intelligence and Statistics (AISTATS)},
 	Keywords = {IRL,Toto},
 	Pages = {20--27},
 	Publisher = {AAAI Press},
